--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<!-- Write your HTML in this file -->
+<DACOTYPE!>
+  <html>
+    <head>
+      <h1>
+        Hello,world!
+      </h1>
+    </head>
+  </html>
